# gcommit

./: .gitignore  README.md  example.gcommit.yaml  gcommit.example.yaml  pyproject.toml  requirements.txt
gcommit/: __init__.py  config.py  git_ops.py  llm.py  main.py
gcommit/prompts/: base.txt  conventional.txt  custom.txt  simple.txt
