[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gcommit"
version = "0.1.0"
description = "AI-powered git commit message generator"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Alexander Kirillov" }]
keywords = ["git", "commit", "cli", "ai", "typer"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
  "typer>=0.19,<1.0",
  "openai>=2.5,<3.0",
  "PyYAML>=6,<7",
]

[project.scripts]
gcommit = "gcommit.main:cli"

[project.urls]
Homepage = "https://github.com/OpsDevil/gcommit"
Repository = "https://github.com/OpsDevil/gcommit"
Issues = "https://github.com/OpsDevil/gcommit/issues"

[tool.hatch.build.targets.wheel]
packages = ["gcommit"]

[tool.ruff]
line-length = 120
target-version = "py311"
